home/containers/kubernetes/tasket_kubernetes_containers/task_038__local__learn_kind_cluster/ingress_nginx/pod_foo_app.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  containers:
  - command:
    - /agnhost
    - netexec
    - --http-port
    - "8080"
    image: registry.k8s.io/e2e-test-images/agnhost:2.39
    name: foo-app
