home/containers/kubernetes/tasket_kubernetes_containers/task_038__local__learn_kind_cluster/ingress_nginx/svc_bar.yaml
kind: Service
apiVersion: v1
metadata:
  name: bar-service
spec:
  selector:
    app: bar
  ports:
  # Default port used by the image
  - port: 8080
